# Oroboros

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260216_0001_initial_control_plane.py  20260216_0002_preview_db_resets.py  20260216_0002_slot_worktree_bindings.py  20260216_0003_preview_db_resets.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  approvals.py  artifacts.py  checks.py  events.py  metrics.py  releases.py  runs.py  slots.py  worktrees.py
backend/app/core/: config.py  preview_slot_contract.py
backend/app/db/: seed.py  session.py
backend/app/domain/: __init__.py  run_state_machine.py
backend/app/models/: __init__.py  approval.py  audit_log.py  common.py  preview_db_reset.py  release.py  run.py  run_artifact.py  run_context.py  run_event.py  slot_lease.py  slot_worktree_binding.py  user.py  validation_check.py
backend/app/services/: __init__.py  git_worktree_manager.py  integration_happy_path.py  integration_happy_path_cli.py  merge_gate.py  (+12 more)
backend/tests/: test_approvals_merge_gate.py  test_artifacts_api.py  test_events_api.py  test_integration_happy_path.py  test_observability_metrics.py  test_preview_slot_contract.py  test_runs_resilience.py  test_slot_lease_manager.py
worker/: .env.example  pyproject.toml
worker/tests/: test_codex_runner.py  test_main_env_loading.py  test_orchestrator_claim.py  test_orchestrator_validation_pipeline.py
worker/worker/: __init__.py  codex_runner.py  main.py  observability.py  orchestrator.py
(+129 files in other folders)
