[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for Ouroboros"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.1",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
